--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
 }
-//plugins {
-//    id 'com.android.application'
-//}
+
 
 android {
     namespace 'com.example.lab11'
@@ -28,6 +26,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    buildFeatures {
+        viewBinding true
     }
 }
 
