--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/Theme.Lab11"
         tools:targetApi="31">
         <activity
+            android:name=".Detail_Activity"
+            android:exported="false" >
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
